src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__tests__draw_blocks_whole_layout_no_logs.snap
---
source: src/core/status/ui/draw_blocks/mod.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) show help   "
"╭ Containers 1/3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 hour   03.00%   30.00 kB / 30.00 kB          1   image_1   0.00 kB   0.00 kB                                ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│   container_2   ✓ running   Up 2 hour   00.00%    0.00 kB /  0.00 kB          2   image_2   0.00 kB   0.00 kB                                ││  restart     │"
"│   container_3   ✓ running   Up 3 hour   00.00%    0.00 kB /  0.00 kB          3   image_3   0.00 kB   0.00 kB                                ││  stop        │"
"│                                                                                                                                              ││  delete      │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"│                                                                                                                                              ││              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────╯"
"╭───────────────────────── cpu 03.00% ──────────────────────────╮╭─────────────────────── memory 30.00 kB ───────────────────────╮╭────────── ports ───────────╮"
"│10.00%│      •••                                               ││100.00 kB│      ••                                             ││       ip   private   public│"
"│      │    ••  •                                               ││         │    •• •                                             ││               8001         │"
"│      │ •••     • •                                            ││         │ •••    • •                                          ││127.0.0.1      8003     8003│"
"│      │•        ••                                             ││         │•       ••                                           ││                            │"
"│      │                                                        ││         │                                                     ││                            │"
"╰───────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────╯╰────────────────────────────╯"
